--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -21,7 +21,8 @@
 */
 @font-face {
     font-family: "ClashDisplay-Extralight";
-    src: url("./fonts/ClashDisplay-Extralight.woff2") format("woff2"),
+    src:
+        url("./fonts/ClashDisplay-Extralight.woff2") format("woff2"),
         url("./fonts/ClashDisplay-Extralight.woff") format("woff"),
         url("./fonts/ClashDisplay-Extralight.ttf") format("truetype");
     font-weight: 200;
@@ -30,7 +31,9 @@
 }
 @font-face {
     font-family: "ClashDisplay-Light";
-    src: url("./fonts/ClashDisplay-Light.woff2") format("woff2"), url("./fonts/ClashDisplay-Light.woff") format("woff"),
+    src:
+        url("./fonts/ClashDisplay-Light.woff2") format("woff2"),
+        url("./fonts/ClashDisplay-Light.woff") format("woff"),
         url("./fonts/ClashDisplay-Light.ttf") format("truetype");
     font-weight: 300;
     font-display: swap;
@@ -38,7 +41,8 @@
 }
 @font-face {
     font-family: "ClashDisplay-Regular";
-    src: url("./fonts/ClashDisplay-Regular.woff2") format("woff2"),
+    src:
+        url("./fonts/ClashDisplay-Regular.woff2") format("woff2"),
         url("./fonts/ClashDisplay-Regular.woff") format("woff"),
         url("./fonts/ClashDisplay-Regular.ttf") format("truetype");
     font-weight: 400;
@@ -47,7 +51,8 @@
 }
 @font-face {
     font-family: "ClashDisplay-Medium";
-    src: url("./fonts/ClashDisplay-Medium.woff2") format("woff2"),
+    src:
+        url("./fonts/ClashDisplay-Medium.woff2") format("woff2"),
         url("./fonts/ClashDisplay-Medium.woff") format("woff"),
         url("./fonts/ClashDisplay-Medium.ttf") format("truetype");
     font-weight: 500;
@@ -56,7 +61,8 @@
 }
 @font-face {
     font-family: "ClashDisplay-Semibold";
-    src: url("./fonts/ClashDisplay-Semibold.woff2") format("woff2"),
+    src:
+        url("./fonts/ClashDisplay-Semibold.woff2") format("woff2"),
         url("./fonts/ClashDisplay-Semibold.woff") format("woff"),
         url("./fonts/ClashDisplay-Semibold.ttf") format("truetype");
     font-weight: 600;
@@ -65,7 +71,9 @@
 }
 @font-face {
     font-family: "ClashDisplay-Bold";
-    src: url("./fonts/ClashDisplay-Bold.woff2") format("woff2"), url("./fonts/ClashDisplay-Bold.woff") format("woff"),
+    src:
+        url("./fonts/ClashDisplay-Bold.woff2") format("woff2"),
+        url("./fonts/ClashDisplay-Bold.woff") format("woff"),
         url("./fonts/ClashDisplay-Bold.ttf") format("truetype");
     font-weight: 700;
     font-display: swap;
@@ -73,7 +81,8 @@
 }
 @font-face {
     font-family: "ClashDisplay-Variable";
-    src: url("./fonts/ClashDisplay-Variable.woff2") format("woff2"),
+    src:
+        url("./fonts/ClashDisplay-Variable.woff2") format("woff2"),
         url("./fonts/ClashDisplay-Variable.woff") format("woff"),
         url("./fonts/ClashDisplay-Variable.ttf") format("truetype");
     font-weight: 200 700;
@@ -157,6 +166,60 @@
     .brutalHover:active {
         translate: 0 0;
         box-shadow: 0 0 0 0 hsl(var(--foreground));
+    }
+
+    .navItem .active {
+        @apply text-background font-medium;
+    }
+
+    .navItem a {
+        --duration: 200ms;
+        position: relative;
+        overflow: hidden;
+
+        transition-property: color;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--animation-curve);
+    }
+
+    .navItem a::before {
+        @apply bg-foreground;
+
+        content: "";
+        position: absolute;
+        inset: 0;
+        z-index: -2;
+
+        translate: 0 100%;
+
+        transition-property: translate;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--animation-curve);
+    }
+
+    .navItem a::after {
+        @apply bg-foreground;
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 2px;
+        width: 100%;
+        z-index: -1;
+
+        translate: 0 100%;
+
+        transition-property: translate;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--animation-curve);
+    }
+
+    .navItem a:hover::after {
+        translate: 0 0;
+    }
+
+    .navItem a.active::before {
+        translate: 0 0;
     }
 }
 
